--- a/index.css
+++ b/index.css
@@ -28,3 +28,38 @@ body {
     font-size: 5vw;
     padding-left: 42vw;
   }
+
+
+/* navigation */
+              .nav-bar {
+                background-color: #333;
+                overflow: hidden;
+              }
+              
+              /* links (a) */
+              .nav-bar a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
+              }
+              
+              /* hover text */
+              .nav-bar a:hover {
+                background-color: #ddd;
+                color: black;
+              }
+              
+              /* response colour */
+              .nav-bar a.active {
+                background-color: #04AA6D;
+                color: white;
+              }
+
+              /* for future adjustments */
+              .nav-img {
+              }
+              .nav-button {
+              }
