--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ body {
               }
 
               /* for future adjustments */
-              .nav-img {
+              .nav-logo {
                 max-height: 5vh;
                 max-width: auto;
               }
