--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
 
 /* navigation */
               .nav-bar {
-                background-color: #F1EFE1;
+                background-color: #00467F;
                 overflow: hidden;
                 /*position*/
                 height: 7vh;
