--- a/index.css
+++ b/index.css
@@ -46,6 +46,17 @@ body {
     text-align: center;
   }
 
+.eco {
+    background-color: #8DBFE8;
+    color: #00467F;
+    border-color: #00467F;
+    border-width: 0.1vw;
+    width: 25vw;
+    height: 10vh;
+    border-radius: 25px;
+    text-align: center;
+  }
+
   .footer {
     height: 15vh;
     width: 100vw;
