--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
   }
 
   .statement {
-    font-size: max(3vh, 1.5vw);
+    font-size: max(2vh, 1.5vw);
     padding: 2vw;
     top-padding: 0.5vh;
   }
@@ -43,7 +43,7 @@ body {
     width: 50vw;
     border-radius: 25px;
     text-align: center;
-    padding-left: 2vw;
+    margin-left: 2vw;
   }
 
 .eco {
@@ -54,7 +54,7 @@ body {
     width: 25vw;
     border-radius: 25px;
     text-align: center;
-    padding-left: 2vw;
+    margin-left: 2vw;
   }
 
   .footer {
