--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ body {
   }
 
   .button:hover {
-    background-color: #2980b9;
+    background-color: #4B644A;
     box-shadow: 0 0 0 30px rgba(0, 230, 150, 0.2);
     transition: all 200ms ease-out;
     z-index: 5;
